# MFSDA_Python

./: CMakeLists.txt  README.md  SuperBuild.cmake
MFSDA/: CMakeLists.txt  MFSDA.py  MFSDA_createShapes.py  MFSDA_run  MFSDA_run.py  MFSDA_run.xml  MFSDA_selectVariablesPCA.py  MFSDA_selectVariablesPCA.xml
MFSDA/Resources/Libraries/: MFSDA_selectVariablesPCA.py  stat_bstrp_pvalue.py  stat_read_x.py  stat_wald_ht.py
MFSDA/Resources/UI/: MFSDA.ui
SuperBuild/: External_python-MFSDA-requirements.cmake
